<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:key="@string/pref_key_theme"
        android:title="@string/pref_title_theme"
        android:summary="%s"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="system" />

    <Preference
        android:key="key_units_screen"
        android:title="@string/pref_category_units"
        android:summary="@string/pref_summary_go_to_units"/>

    <PreferenceCategory
    android:key="category_general"
        android:title="@string/pref_category_general">

    <ListPreference
    android:key="@string/pref_key_language"
        android:title="@string/pref_title_language"
        android:summary="@string/pref_summary_language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="system" />

    <SwitchPreferenceCompat
    android:key="@string/pref_key_notifications"
        android:title="@string/pref_title_notifications"
        android:summaryOn="@string/pref_summary_notifications_on"
        android:summaryOff="@string/pref_summary_notifications_off"
        android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>