<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_monitoring">

    <fragment
        android:id="@+id/navigation_monitoring"
        android:name="com.example.smartfarmapp.fragments.MonitoringFragment"
        android:label="@string/title_monitoring"
        tools:layout="@layout/fragment_monitoring" />

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.example.smartfarmapp.fragments.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/navigation_cycles"
        android:name="com.example.smartfarmapp.fragments.CyclesListFragment"
        android:label="@string/title_cycles"
        tools:layout="@layout/fragment_cycles_list" />

</navigation>