<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.MonitoringFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>


    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_temperature"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <TextView
        android:id="@+id/temperatureValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        tools:text="24.5 °C" />

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_humidity"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <TextView
        android:id="@+id/humidityValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        tools:text="65.0 %" />

    <TextView
        android:id="@+id/lightStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_light_status"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <TextView
        android:id="@+id/lightStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        tools:text="Включен" />
    <TextView
        android:id="@+id/pumpStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_pump_status"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightStatusLabel"/> <!-- или lightStatusText -->

    <TextView
        android:id="@+id/pumpStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintStart_toEndOf="@id/pumpStatusLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/pumpStatusLabel"
        tools:text="Выключен" />

    <TextView
        android:id="@+id/timestampText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        tools:text="Обновлено: 12:30:05"
        app:layout_constraintTop_toBottomOf="@id/pumpStatusLabel"
        />

    </LinearLayout>


    <TextView
    android:id="@+id/errorText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="?attr/colorError"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Ошибка загрузки данных"
    tools:visibility="visible"/>


    <Button
    android:id="@+id/refreshButton"
    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_refresh"
    app:icon="@drawable/ic_refresh"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>